source_using_transformers/slurm-run_3_epochs_transformer.out-23.out
  File "run_race.py", line 227
    segment_ids = [0] * (len(context_tokens_choice) + 2) +
                                                         ^
SyntaxError: invalid syntax
